<resources>
    <string name="app_name">calculada Simples</string>
    <string name="canal">CFB Cursos - Canal Fessor Bruno</string>
    <string name="curso">Curso de Android Studio</string>
    <string name="somar">SOMAR</string>
    <string name="subtrair">SUBTRAIR</string>
    <string name="multiplicar">MULTIPLICAR</string>
    <string name="dividir">DIVIDIR</string>
    <string name="valor1">Digite o primeiro valor</string>
    <string name="valor2">Digite o segundo valor</string>
</resources>