<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="wrap_content"
        android:background="#FF8F8F"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_valor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:numeric="decimal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numeric="decimal"
            android:text="@string/valor2"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_valor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:textSize="34sp" />

        <Button
            android:id="@+id/btn_somar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="opera"
            android:text="@string/somar" />

        <Button
            android:id="@+id/btn_subtrair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="opera"
            android:text="@string/subtrair" />

        <Button
            android:id="@+id/btn_multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="opera"
            android:text="@string/multiplicar" />

        <Button
            android:id="@+id/btn_dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="opera"
            android:text="@string/dividir" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>